--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,17 @@ uuid = "210f2f7c-c278-4e54-96d9-b4d41cb9412a"
 authors = ["Yakir Gagnon <12.yakir@gmail.com> and contributors"]
 version = "0.1.0"
 
+[deps]
+AbstractPlotting = "537997a7-5e4e-5d89-9595-2241ea00577e"
+ContextTracking = "6cbdd853-f5b8-41ca-9b66-f060deb7aec3"
+GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
+MAT = "23992714-dd62-5051-b70f-ba57cb901cac"
+REPL = "3fa0cd96-eef1-5676-8a61-b3b8758bbffb"
+Serialization = "9e88b42a-f829-5b0c-bbe9-9e923198166b"
+SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
+StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
+VideoIO = "d6d074c3-1acf-5d4c-9a43-ef38773959a2"
+
 [compat]
 julia = "1"
 
