--- a/Project.toml
+++ b/Project.toml
@@ -6,13 +6,15 @@ version = "0.1.0"
 [deps]
 AbstractPlotting = "537997a7-5e4e-5d89-9595-2241ea00577e"
 ContextTracking = "6cbdd853-f5b8-41ca-9b66-f060deb7aec3"
+FFMPEG_jll = "b22a6f82-2f65-5046-a5b2-351ab43fb4e5"
+FileIO = "5789e2e9-d7fb-5bc7-8068-2c6fae9b9549"
 GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
+ImageMagick = "6218d12a-5da1-5696-b52f-db25d2ecc6d1"
 MAT = "23992714-dd62-5051-b70f-ba57cb901cac"
 REPL = "3fa0cd96-eef1-5676-8a61-b3b8758bbffb"
 Serialization = "9e88b42a-f829-5b0c-bbe9-9e923198166b"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
-VideoIO = "d6d074c3-1acf-5d4c-9a43-ef38773959a2"
 
 [compat]
 julia = "1"
