--- a/Project.toml
+++ b/Project.toml
@@ -7,6 +7,7 @@ version = "0.1.0"
 AbstractPlotting = "537997a7-5e4e-5d89-9595-2241ea00577e"
 ContextTracking = "6cbdd853-f5b8-41ca-9b66-f060deb7aec3"
 FFMPEG_jll = "b22a6f82-2f65-5046-a5b2-351ab43fb4e5"
+FFplay_jll = "c4dce911-e170-5107-8314-c7bdc6785395"
 FileIO = "5789e2e9-d7fb-5bc7-8068-2c6fae9b9549"
 GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
 ImageMagick = "6218d12a-5da1-5696-b52f-db25d2ecc6d1"
