--- a/Project.toml
+++ b/Project.toml
@@ -7,24 +7,31 @@ version = "0.1.0"
 AbstractPlotting = "537997a7-5e4e-5d89-9595-2241ea00577e"
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 Colors = "5ae59095-9a9b-59fe-a467-6f913c188581"
+Combinatorics = "861a8166-3701-5b0c-9a16-15d98fcdc6aa"
 ContextTracking = "6cbdd853-f5b8-41ca-9b66-f060deb7aec3"
 CoordinateTransformations = "150eb455-5306-5404-9cee-2592286d6298"
-FFMPEG_jll = "b22a6f82-2f65-5046-a5b2-351ab43fb4e5"
+DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
+FFMPEG = "c87230d0-a227-11e9-1b43-d7ebe4e7570a"
 FFplay_jll = "c4dce911-e170-5107-8314-c7bdc6785395"
 FileIO = "5789e2e9-d7fb-5bc7-8068-2c6fae9b9549"
 FilePathsBase = "48062228-2e41-5def-b9a4-89aafe57970f"
+GLFW = "f7f18e0c-5ee9-5ccd-a5bf-e8befd85ed98"
 GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
 ImageIO = "82e4d734-157c-48bb-816b-45c225c6df19"
 ImageMagick = "6218d12a-5da1-5696-b52f-db25d2ecc6d1"
 ImageTransformations = "02fcd773-0e25-5acc-982a-7f6622650795"
+Images = "916415d5-f1e6-5110-898d-aaa5f9f070e0"
 Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 MAT = "23992714-dd62-5051-b70f-ba57cb901cac"
 MATLAB = "10e44e05-a98a-55b3-a45b-ba969058deb6"
+Memoization = "6fafb56a-5788-4b4e-91ca-c0cea6611c73"
 PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
 REPL = "3fa0cd96-eef1-5676-8a61-b3b8758bbffb"
 Serialization = "9e88b42a-f829-5b0c-bbe9-9e923198166b"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
+Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 
 [compat]
 julia = "1"
