--- a/Project.toml
+++ b/Project.toml
@@ -11,6 +11,7 @@ CoordinateTransformations = "150eb455-5306-5404-9cee-2592286d6298"
 FFMPEG = "c87230d0-a227-11e9-1b43-d7ebe4e7570a"
 FilePathsBase = "48062228-2e41-5def-b9a4-89aafe57970f"
 GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
+ImageMagick = "6218d12a-5da1-5696-b52f-db25d2ecc6d1"
 ImageTransformations = "02fcd773-0e25-5acc-982a-7f6622650795"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 MAT = "23992714-dd62-5051-b70f-ba57cb901cac"
