--- a/Project.toml
+++ b/Project.toml
@@ -22,6 +22,7 @@ MATLAB = "10e44e05-a98a-55b3-a45b-ba969058deb6"
 Memoization = "6fafb56a-5788-4b4e-91ca-c0cea6611c73"
 Missings = "e1d29d7a-bbdc-5cf2-9ac0-f12de2c33e28"
 OffsetArrays = "6fe1bfb0-de20-5000-8ca7-80f57d26f881"
+ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
 Rotations = "6038ab10-8711-5258-84ad-4b1120ba62dc"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
