--- a/Project.toml
+++ b/Project.toml
@@ -9,6 +9,7 @@ AngleBetweenVectors = "ec570357-d46e-52ed-9726-18773498274d"
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 Combinatorics = "861a8166-3701-5b0c-9a16-15d98fcdc6aa"
 CoordinateTransformations = "150eb455-5306-5404-9cee-2592286d6298"
+DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
 Dierckx = "39dd38d3-220a-591b-8e3c-4c3a8c710a94"
 FFMPEG = "c87230d0-a227-11e9-1b43-d7ebe4e7570a"
