--- a/Project.toml
+++ b/Project.toml
@@ -35,8 +35,32 @@ StructArrays = "09ab397b-f2b6-538f-b94a-2f83cf4a842a"
 Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
 
 [compat]
+AbstractPlotting = "0.12"
+AngleBetweenVectors = "0.3"
+CSV = "0.7"
+Combinatorics = "1.0"
+CoordinateTransformations = "0.6"
 DataFrames = "0.21"
+DataStructures = "0.18"
+Dierckx = "0.5"
+FFMPEG = "0.4"
+FilePathsBase = "0.9"
+GLMakie = "0.1."
+ImageMagick = "1.1"
+ImageTransformations = "0.8"
 LabelledArrays = "1.3"
+MAT = "0.8"
+MATLAB = "0.7"
+Measurements = "2.3"
+Memoization = "0.1"
+Missings = "0.4"
+OffsetArrays = "1.3"
+ProgressMeter = "1.4"
+Rotations = "1.0"
+StaticArrays = "0.12"
+StatsBase = "0.33"
+StructArrays = "0.4"
+Unitful = "1.4"
 julia = "1"
 
 [extras]
