--- a/Project.toml
+++ b/Project.toml
@@ -45,7 +45,7 @@ DataStructures = "0.18"
 Dierckx = "0.5"
 FFMPEG = "0.4"
 FilePathsBase = "0.9"
-GLMakie = "0.1."
+GLMakie = "0.1"
 ImageMagick = "1.1"
 ImageTransformations = "0.8"
 LabelledArrays = "1.3"
