--- a/Project.toml
+++ b/Project.toml
@@ -7,6 +7,7 @@ version = "0.1.3"
 AbstractPlotting = "537997a7-5e4e-5d89-9595-2241ea00577e"
 AngleBetweenVectors = "ec570357-d46e-52ed-9726-18773498274d"
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
+CameraCalibrations = "70c3cbac-2c23-4b2d-966c-5a25c0a540fb"
 Combinatorics = "861a8166-3701-5b0c-9a16-15d98fcdc6aa"
 CoordinateTransformations = "150eb455-5306-5404-9cee-2592286d6298"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
