--- a/Project.toml
+++ b/Project.toml
@@ -35,6 +35,7 @@ StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 StructArrays = "09ab397b-f2b6-538f-b94a-2f83cf4a842a"
+Tar = "a4e569a6-e804-4fa4-b0f3-eef7a1d5b13e"
 Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
 
 [compat]
