--- a/Project.toml
+++ b/Project.toml
@@ -40,7 +40,7 @@ Tar = "a4e569a6-e804-4fa4-b0f3-eef7a1d5b13e"
 Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
 
 [compat]
-AbstractPlotting = "0.12, 0.13, 0.14"
+AbstractPlotting = "0.12, 0.13, 0.14, 0.15"
 AngleBetweenVectors = "0.3"
 CSV = "0.7, 0.8"
 CameraCalibrations = "0.2"
@@ -55,11 +55,11 @@ FilePathsBase = "0.9"
 GLMakie = "0.1"
 ImageCore = "0.8"
 ImageMagick = "1.1"
-ImageTransformations = "0.8"
+ImageTransformations = "0.8.7"
 Interpolations = "0.12, 0.13"
 LabelledArrays = "1.3"
 MAT = "0.8, 0.9, 0.10"
-MATLAB = "0.7"
+MATLAB = "0.8"
 Measurements = "2.3"
 Memoization = "0.1"
 Missings = "0.4"
