--- a/Project.toml
+++ b/Project.toml
@@ -4,7 +4,6 @@ authors = ["Yakir Gagnon <12.yakir@gmail.com> and contributors"]
 version = "0.1.5"
 
 [deps]
-AbstractPlotting = "537997a7-5e4e-5d89-9595-2241ea00577e"
 AngleBetweenVectors = "ec570357-d46e-52ed-9726-18773498274d"
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 CameraCalibrations = "70c3cbac-2c23-4b2d-966c-5a25c0a540fb"
@@ -29,6 +28,7 @@ Measurements = "eff96d63-e80a-5855-80a2-b1b0885c5ab7"
 Memoization = "6fafb56a-5788-4b4e-91ca-c0cea6611c73"
 Missings = "e1d29d7a-bbdc-5cf2-9ac0-f12de2c33e28"
 OffsetArrays = "6fe1bfb0-de20-5000-8ca7-80f57d26f881"
+OnlineStats = "a15396b6-48d5-5d58-9928-6d29437db91e"
 ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
 Rotations = "6038ab10-8711-5258-84ad-4b1120ba62dc"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
@@ -40,7 +40,6 @@ Tar = "a4e569a6-e804-4fa4-b0f3-eef7a1d5b13e"
 Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
 
 [compat]
-AbstractPlotting = "0.12, 0.13, 0.14, 0.15"
 AngleBetweenVectors = "0.3"
 CSV = "0.7, 0.8"
 CameraCalibrations = "0.2"
