CompatHelper: bump compat for ImageTransformations to 0.9, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -58,7 +58,7 @@ FilePathsBase = "0.9"
 GLMakie = "0.1, 0.2, 0.3, 0.4"
 ImageCore = "0.8, 0.9"
 ImageMagick = "1.1"
-ImageTransformations = "0.8"
+ImageTransformations = "0.8, 0.9"
 Interpolations = "0.12, 0.13"
 IterTools = "1.3"
 LabelledArrays = "1.3"
